--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -115,6 +115,7 @@ section p{
     .column-md-12{
         width: 90%;
         margin: auto;
+        margin-bottom: 40px;
     }
 }
 @media (min-width: 768px) and (max-width: 991px) {
@@ -127,11 +128,13 @@ section p{
     .column-md-12{
         width: 80%;
         margin: auto;
+        margin-bottom: 40px;
     }
 }
 @media (max-width:767px) {
     .column-sm-12{
         width: 75%;
         margin: auto;
+        margin-bottom: 40px;
     }
 }
